--- a/cover.html
+++ b/cover.html
@@ -11,7 +11,7 @@
       <section class="cover-card">
         <div class="cover-left">
           <button class="image-open" aria-label="Buka foto rumah kajang lako">
-            <img src="kajang lako.jpg" alt="Rumah Kajang Lako" />
+            <img src="rumahtuo.jpg" alt="Rumah Kajang Lako" />
           </button>
           <p class="image-caption">Rumah Kajang Lako</p>
         </div>
@@ -61,4 +61,5 @@
     <script src="virs.js"></script>
   </body>
 </html>
+
 
