--- a/cover.html
+++ b/cover.html
@@ -43,7 +43,7 @@
       </section>
 
       <footer class="cover-footer">
-        <small>InCeViRa❤️</small>
+        <small>InCeViRa</small>
       </footer>
     </main>
 
@@ -61,5 +61,6 @@
     <script src="virs.js"></script>
   </body>
 </html>
+
 
 
